# tecio

./: .gitignore  CMakeLists.txt  README.md
teciosrc/: JobControl_s.h
tecplot2023/lib/: adkutil.lib  exception.lib  tecgui.lib  tecio.lib  teciompi.lib  tecquery.lib  tecutildataio_utils.lib  tp360addonuiaction.lib  tp360event.lib  tpsdkbase.lib  tptoolbox.lib
